--- a/client/src/app/pages/authentication/login/login.component.html
+++ b/client/src/app/pages/authentication/login/login.component.html
@@ -8,7 +8,7 @@
       <a mat-button disableRipple="true" routerLink="/read-more">Read More</a>
     </div>
     <div class="row__copyright">
-      <span>©2019 <a href="#">yourcareerfair.com</a> | Cookies, Privacy and Terms</span>
+      <span>©2019 <a href="#">yourcareerfair.com</a> | <a routerLink="/legal">Cookies, Privacy and Terms</a>s</span>
     </div>
   </div>
   <div class="container__right" [formGroup]="loginForm">
@@ -45,7 +45,7 @@
       <action-button type="text" title="Resend Email" color="primary" (click)="goToEmailSentPage()"></action-button>
     </div>
     <div class="row__copyright">
-      <span>©2019 <a href="#">yourcareerfair.com</a> | Cookies, Privacy and Terms</span>
+      <span>©2019 <a href="#">yourcareerfair.com</a> | <a routerLink="/legal">Cookies, Privacy and Terms</a></span>
     </div>
   </div>
 </div>
