--- a/client/src/app/pages/authentication/registration/registration.component.html
+++ b/client/src/app/pages/authentication/registration/registration.component.html
@@ -3,7 +3,7 @@
     <div class="row__info">
       <h1>Welcome to yourCareerFair</h1>
       <p>
-        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real time for users to see. In addition, yourCareerFair leverages this algorithm in its search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates and other pertinent metrics. For those who prefer a more traditional search, yourCareerFair also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and helping all people to find appropriate, interesting, and compatible employment.
+        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real time for users to see. In addition, yourCareerFair leverages this algorithm in its search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates and other pertinent metrics. For those who prefer a more traditional search, yourCareerFair also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and helping all people to find appropriate, engaging, and compatible employment.
       </p>
       <a mat-button disableRipple="true" routerLink="/read-more">Read More</a>
     </div>
@@ -49,7 +49,8 @@
       </mat-form-field>
     </div>
     <div class="row__checkbox">
-      <round-checkbox id="agree-term" title="I Agree to CareerFair's Terms & Conditions" [checked]="isAgreeTerm" (statusChange)="toggleAgreeTerm($event)"></round-checkbox>
+      <round-checkbox id="agree-term" title="I Agree to CareerFair's &nbsp;" [checked]="isAgreeTerm" (statusChange)="toggleAgreeTerm($event)"></round-checkbox>
+      <a routerLink="legal"> Terms & Conditions</a>
     </div>
     <div class="row__buttons">
       <action-button type="stroked" title="Login" (click)="navigateToLogin()"></action-button>
