--- a/client/src/app/pages/authentication/registration/registration.component.html
+++ b/client/src/app/pages/authentication/registration/registration.component.html
@@ -50,7 +50,7 @@
     </div>
     <div class="row__checkbox">
       <round-checkbox id="agree-term" title="I Agree to CareerFair's &nbsp;" [checked]="isAgreeTerm" (statusChange)="toggleAgreeTerm($event)"></round-checkbox>
-      <a routerLink="legal"> Terms & Conditions</a>
+      <a routerLink="/legal"> Terms & Conditions</a>
     </div>
     <div class="row__buttons">
       <action-button type="stroked" title="Login" (click)="navigateToLogin()"></action-button>
