--- a/client/src/app/pages/profile/create-profile/create-profile.component.scss
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.scss
@@ -287,7 +287,7 @@ p {
                 margin-right: 15px;
               }
               mat-icon {
-                color: map-get($md-cfprimary, 500);
+                color: map-get($md-cfaccent, 100);
               }
             }
           }
