Use “Industry Exposure” instead of “Additional Industry Exposure”

--- a/client/src/app/components/main-section/dialog-content.component.html
+++ b/client/src/app/components/main-section/dialog-content.component.html
@@ -181,7 +181,7 @@
         </div>
       </div>
       <div class="form-field search">
-        <h3>Additional Industry Exposure <span *ngIf="additional_industries.length > 0" class="count">{{additional_industries.length}}</span></h3>
+        <h3>Industry Exposure <span *ngIf="additional_industries.length > 0" class="count">{{additional_industries.length}}</span></h3>
         <mat-form-field appearance="standard" class="search">
           <mat-icon matSuffix>search</mat-icon>
           <input matInput placeholder="Search Industries" type="text" [matAutocomplete]="autocompleteAdditionalIndustry" formControlName="additional_industries">
