--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -369,7 +369,7 @@
           </div>
   
           <div class="profile-form__field search">
-            <h3>Additional Industry Exposure <span *ngIf="additional_industries[i].length > 0" class="count">{{additional_industries[i].length}}</span></h3>
+            <h3>Industry Exposure <span *ngIf="additional_industries[i].length > 0" class="count">{{additional_industries[i].length}}</span></h3>
             <mat-form-field appearance="standard" class="search">
               <mat-icon matSuffix>search</mat-icon>
               <input matInput placeholder="Search Industries" type="text" [matAutocomplete]="autocompleteAdditionalIndustry" formControlName="additional_industries">
