--- a/client/src/app/components/main-section/main-section.component.scss
+++ b/client/src/app/components/main-section/main-section.component.scss
@@ -207,6 +207,17 @@
       padding: 10px 20px 5px 20px;
     }
   }
+  .temp-skill {
+    margin-top: 10px;
+    @include flex(row, center, flex-start);
+    & > *  {
+      margin-top: 20px;
+      margin-right: 15px;
+    }
+    mat-icon {
+      color: map-get($md-cfaccent, 100);
+    }
+  }
 }
 
 @media only screen and (max-width: 991px) {
