--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -105,6 +105,7 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>Country</mat-label>
             <mat-select formControlName="basicInfoCountry">
+              <mat-option value="{{null}}">{{null}}</mat-option>
               <mat-option *ngFor="let country of countries" value="{{country}}">{{country}}</mat-option>
             </mat-select>
           </mat-form-field>
