--- a/client/src/app/components/header-section/header-section.component.html
+++ b/client/src/app/components/header-section/header-section.component.html
@@ -65,8 +65,8 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>City</mat-label>
             <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="city">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('city').valid && checkCityValidation()">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="(!generalInfoForm.get('city').valid || !checkCityValidation()) && generalInfoForm.get('city').touched">close</mat-icon>
+            <mat-icon matSuffix *ngIf="generalInfoForm.get('city').value && generalInfoForm.get('city').valid && checkCityValidation()">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('city').value && !checkCityValidation() && generalInfoForm.get('city').touched">close</mat-icon>
             <mat-autocomplete #autocompleteCity="matAutocomplete" (closed)="onBlurCity()">
               <mat-option *ngFor="let city of autocomplete_cities" [value]="helperService.cityNameFromAutoComplete(city.city)" (onSelectionChange)="onSelectCity(city)">
                 <span>{{city.city}}</span>
@@ -79,8 +79,8 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>State</mat-label>
             <input matInput placeholder="State" type="text" [matAutocomplete]="autocompleteState" formControlName="state">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('state').valid && checkStateValidation()">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="(!generalInfoForm.get('state').valid || !checkStateValidation()) && generalInfoForm.get('state').touched">close</mat-icon>
+            <mat-icon matSuffix *ngIf="generalInfoForm.get('state').value && generalInfoForm.get('state').valid && checkStateValidation()">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('state').value && !checkStateValidation() && generalInfoForm.get('state').touched">close</mat-icon>
             <mat-autocomplete #autocompleteState="matAutocomplete" (closed)="onBlurState()">
               <mat-option *ngFor="let state of autocomplete_states" [value]="state.state" (onSelectionChange)="onSelectState(state)">
                 <span>{{state.state}}</span>
@@ -93,6 +93,7 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>Country</mat-label>
             <mat-select formControlName="country">
+              <mat-option value="{{null}}">{{null}}</mat-option>
               <mat-option *ngFor="let country of countries" value="{{country}}">{{country}}</mat-option>
             </mat-select>
           </mat-form-field>
