--- a/client/src/app/pages/profile/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.scss
@@ -52,6 +52,9 @@ legend {
     color: map-get($md-cfprimary, 500);
     @include disable-select();
     cursor: pointer;
+    &.disabled {
+      color: map-get($md-cfaccent, 100);
+    }
   }
 }
 
