--- a/client/src/app/components/nav-section/nav-section.component.html
+++ b/client/src/app/components/nav-section/nav-section.component.html
@@ -15,6 +15,6 @@
     </div>
   </ng-container>
   <div *ngIf="editMode" class="btn-section">
-    <action-button class="nav-btn" type="flat" title="Update Changes" color="primary" (click)="onClickUpdate()"></action-button>
+    <action-button class="nav-btn" type="flat" title="Update Changes" [disabled]="!headerFormValid" color="primary" (click)="onClickUpdate()"></action-button>
   </div>  
 </nav>
