--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -9,7 +9,7 @@
       <mat-icon>menu</mat-icon>
     </div>
     <a *ngIf="!editMode" (click)="onClickEdit()">Edit Profile</a>
-    <a *ngIf="editMode" (click)="onClickUpdate()">Update Changes</a>
+    <a *ngIf="editMode" [class.disabled]="!headerFormValid" (click)="onClickUpdate()">Update Changes</a>
   </legend>
   <main-section
     [selectedNavMenu]="navMenu[selectedNavMenuIndex].id"
@@ -27,7 +27,7 @@
     (userIntroUpdated)="onChangeUserIntro($event)"
     (clickEdit)="onClickEdit()"
   ></main-section>
-  <nav-section [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex" (clickUpdate)="onClickUpdate()" (selectNavMenu)="onSelectNavMenu($event)" (selectedNavItem)="onSelectNavItem($event)" [isOpened]="isNavMenuOpened" [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
+  <nav-section [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex" [headerFormValid]="headerFormValid" (clickUpdate)="onClickUpdate()" (selectNavMenu)="onSelectNavMenu($event)" (selectedNavItem)="onSelectNavItem($event)" [isOpened]="isNavMenuOpened" [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
 </ng-container>
 
 <ng-container *ngIf="isProfileLoading">
