--- a/client/src/app/components/header-section/header-section.component.html
+++ b/client/src/app/components/header-section/header-section.component.html
@@ -10,7 +10,7 @@
       <div class="user-detail">
         <div>
           <h1>{{generalInfo.first_name}} {{generalInfo.last_name}}</h1>
-          <h4>{{generalInfo.title}}</h4>
+          <h4>{{generalInfo.title ? generalInfo.title : ''}}</h4>
         </div>
         <div class="user-info">
           <div>
