--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -415,7 +415,7 @@ p {
   font-family: 'Roboto', sans-serif;
   color: map-get($md-cfaccent, 400);
   &.description {
-    word-break: break-all;
+    word-break: break-word;
     white-space: pre-wrap;
   }
 }
