--- a/client/src/app/components/header-section/header-section.component.html
+++ b/client/src/app/components/header-section/header-section.component.html
@@ -4,8 +4,19 @@
   </div> -->
   <div *ngIf="generalInfo" class="user-row">
     <div>
-      <img class="user-photo" src="{{generalInfo.photo ? generalInfo.photo : 'assets/icons/no_photo.png'}}">
+      <input [disabled]="!editMode"
+             style="display: none"
+             type="file"
+             (change)="onPhotoFileSelected($event)"
+             #fileInput>
+
+      <div [ngClass]="{'hover-img': editMode}" (click)="fileInput.click()">
+        <img class="user-photo"
+             src="{{generalInfoForm.get('photo').value || 'assets/icons/no_photo.png'}}"
+             alt="Profile Image">
+      </div>
     </div>
+
     <ng-container *ngIf="!editMode">
       <div class="user-detail">
         <div>
@@ -67,7 +78,9 @@
             <mat-icon matSuffix *ngIf="generalInfoForm.get('city').value && generalInfoForm.get('city').valid && helperService.checkSpacesString(generalInfoForm.get('city').value) && checkCityValidation()">done</mat-icon>
             <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('city').value && helperService.checkSpacesString(generalInfoForm.get('city').value) && !checkCityValidation() && generalInfoForm.get('city').touched">close</mat-icon>
             <mat-autocomplete #autocompleteCity="matAutocomplete" (closed)="onBlurCity()">
-              <mat-option *ngFor="let city of autocomplete_cities" [value]="helperService.cityNameFromAutoComplete(city.city)" (onSelectionChange)="onSelectCity(city)">
+              <mat-option *ngFor="let city of autocomplete_cities"
+                          [value]="helperService.cityNameFromAutoComplete(city.city)"
+                          (onSelectionChange)="onSelectCity(city)">
                 <span>{{city.city}}</span>
               </mat-option>
             </mat-autocomplete>
@@ -81,7 +94,8 @@
             <mat-icon matSuffix *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && generalInfoForm.get('state').valid && checkStateValidation()">done</mat-icon>
             <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && !checkStateValidation() && generalInfoForm.get('state').touched">close</mat-icon>
             <mat-autocomplete #autocompleteState="matAutocomplete" (closed)="onBlurState()">
-              <mat-option *ngFor="let state of autocomplete_states" [value]="state.state" (onSelectionChange)="onSelectState(state)">
+              <mat-option *ngFor="let state of autocomplete_states" [value]="state.state"
+                          (onSelectionChange)="onSelectState(state)">
                 <span>{{state.state}}</span>
               </mat-option>
             </mat-autocomplete>
@@ -98,7 +112,7 @@
           </mat-form-field>
         </div>
 
-        <div class="form-field"> 
+        <div class="form-field">
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>Date Of Birth</mat-label>
             <input matInput placeholder="MM/DD/YYYY" formControlName="birthdate" pattern="\d{1,2}/\d{1,2}/\d{4}">
@@ -123,7 +137,8 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>Ethnicity</mat-label>
             <mat-select formControlName="ethnicity">
-              <mat-option *ngFor="let ethnicityType of ethnicityTypes" value="{{ethnicityType}}">{{ethnicityType}}</mat-option>
+              <mat-option *ngFor="let ethnicityType of ethnicityTypes"
+                          value="{{ethnicityType}}">{{ethnicityType}}</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
