--- a/client/src/app/components/main-section/main-section.component.html
+++ b/client/src/app/components/main-section/main-section.component.html
@@ -63,10 +63,10 @@
         <h5>Skills Trained {{experience.skills_trained.length}}</h5>
         <div class="skills" *ngIf="displayItemsLimit; let limit">
           <ng-container *ngFor="let skill_trained of experience.skills_trained; let i = index;">
-            <simple-tag *ngIf="i < limit" type="gray" title="{{skill_trained.skill}}"></simple-tag>
+            <simple-tag *ngIf="(!editMode && i < limit) || editMode" type="gray" title="{{skill_trained.skill}}"></simple-tag>
           </ng-container>
-          <mat-icon *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
-          <mat-icon *ngIf="limit < experience.skills_trained.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
+          <mat-icon *ngIf="!editMode && limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
+          <mat-icon *ngIf="!editMode && limit < experience.skills_trained.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
         </div>
       </ng-container>
       <ng-container *ngIf="experience.industries && experience.industries.length > 0">
@@ -77,10 +77,10 @@
         <h5>Industry Exposure {{experience.add_industries.length}}</h5>
         <div class="skills" *ngIf="displayItemsLimit; let limit">
           <ng-container *ngFor="let add_industry of experience.add_industries; let i = index;">
-            <simple-tag *ngIf="i < limit" type="gray" title="{{add_industry.industry_name}}"></simple-tag>
+            <simple-tag *ngIf="(!editMode && i < limit) || editMode" type="gray" title="{{add_industry.industry_name}}"></simple-tag>
           </ng-container>
-          <mat-icon *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
-          <mat-icon *ngIf="limit < experience.add_industries.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
+          <mat-icon *ngIf="!editMode && limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
+          <mat-icon *ngIf="!editMode && limit < experience.add_industries.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
         </div>
       </ng-container>
       <mat-divider *ngIf="(i < experienceList.length - 1) || editMode"></mat-divider>
@@ -161,10 +161,10 @@
       <h5>Skills {{userSkillsList.length}}</h5>
       <div class="skills" *ngIf="displayItemsLimit; let limit">
         <ng-container *ngFor="let skill of userSkillsList; let i = index">
-          <simple-tag *ngIf="i < limit" type="gray" title="{{skill.skill}}" ellipseTag="true" value="{{skill.skill_level}}" (levelChanged)="onLevelChanged($event, i)" (removeClick)="removeUserSkillsData(i, skill)" [isControl]="editMode"></simple-tag>
+          <simple-tag *ngIf="(!editMode && i < limit) || editMode" type="gray" title="{{skill.skill}}" ellipseTag="true" value="{{skill.skill_level}}" (levelChanged)="onLevelChanged($event, i)" (removeClick)="removeUserSkillsData(i, skill)" [isControl]="editMode"></simple-tag>
         </ng-container>
-        <mat-icon *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
-        <mat-icon *ngIf="limit < userSkillsList.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
+        <mat-icon *ngIf="!editMode && limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
+        <mat-icon *ngIf="!editMode && limit < userSkillsList.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
       </div>
     </ng-container>
   </div>
@@ -185,10 +185,10 @@
     <h5>Interests {{userInterestsList.length}}</h5>
     <div class="skills" *ngIf="displayItemsLimit; let limit">
       <ng-container *ngFor="let interest of userInterestsList; let i = index">
-        <simple-tag *ngIf="i < limit" type="gray" title="{{interest.interest}}" [removeTag]="editMode" (click)="removeUserInteretsData(i, interest)"></simple-tag>
+        <simple-tag *ngIf="(!editMode && i < limit) || editMode" type="gray" title="{{interest.interest}}" [removeTag]="editMode" (click)="removeUserInteretsData(i, interest)"></simple-tag>
       </ng-container>
-      <mat-icon *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
-      <mat-icon *ngIf="limit < userInterestsList.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
+      <mat-icon *ngIf="!editMode && limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit">remove_circle_outline</mat-icon>
+      <mat-icon *ngIf="!editMode && limit < userInterestsList.length" (click)="limit = limit + displayItemsLimit">add_circle_outline</mat-icon>
     </div>
   </div>
 
