--- a/client/src/app/components/main-section/main-section.component.scss
+++ b/client/src/app/components/main-section/main-section.component.scss
@@ -220,13 +220,10 @@
   }
   .skills {
     @include flex(row, center, flex-start);
-    mat-icon {
-      color: rgba(map-get($md-cfaccent, 500), .3);
-      font-size: 30px;
+    img {
       width: 30px;
       height: 30px;
       margin: 10px 0 5px 10px;
-      @include disable-select();
       cursor: pointer;
     }
   }
