Education Form, WorkExperience Form, Projects Form, Publications Form, and External Resources Form

--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -208,8 +208,8 @@
             <mat-form-field class="bg-transparent" appearance="fill">
               <mat-label>Major</mat-label>
               <input matInput placeholder="Major" type="text" [matAutocomplete]="autocompleteMajor" formControlName="major">
-              <mat-icon matSuffix *ngIf="educationFormArray.at(i).get('major').value && checkMajorValidation(i, false)">done</mat-icon>
-              <mat-icon matSuffix class="error-field" *ngIf="educationFormArray.at(i).get('major').value && !checkMajorValidation(i, false) && educationFormArray.at(i).get('major').touched">close</mat-icon>
+              <mat-icon matSuffix *ngIf="educationFormArray.at(i).get('major').value && helperService.checkSpacesString(educationFormArray.at(i).get('major').value) && checkMajorValidation(i, false)">done</mat-icon>
+              <mat-icon matSuffix class="error-field" *ngIf="educationFormArray.at(i).get('major').value && helperService.checkSpacesString(educationFormArray.at(i).get('major').value) && !checkMajorValidation(i, false) && educationFormArray.at(i).get('major').touched">close</mat-icon>
               <mat-autocomplete #autocompleteMajor="matAutocomplete" (closed)="onBlurMajor(i)">
                 <mat-option *ngFor="let autocomplete_major of autocomplete_majors[i]" [value]="autocomplete_major.major_name" (onSelectionChange)="onSelectMajor(i, autocomplete_major)">
                   <span>{{autocomplete_major.major_name}}</span>
@@ -221,8 +221,8 @@
             <mat-form-field class="bg-transparent" appearance="fill">
               <mat-label>Focus</mat-label>
               <input matInput placeholder="Focus Major" type="text" [matAutocomplete]="autocompleteFocusMajor" formControlName="focus_major">
-              <mat-icon matSuffix *ngIf="educationFormArray.at(i).get('focus_major').value && checkMajorValidation(i, true)">done</mat-icon>
-              <mat-icon matSuffix class="error-field" *ngIf="educationFormArray.at(i).get('focus_major').value && !checkMajorValidation(i, true) && educationFormArray.at(i).get('focus_major').touched">close</mat-icon>
+              <mat-icon matSuffix *ngIf="educationFormArray.at(i).get('focus_major').value && helperService.checkSpacesString(educationFormArray.at(i).get('focus_major').value) && checkMajorValidation(i, true)">done</mat-icon>
+              <mat-icon matSuffix class="error-field" *ngIf="educationFormArray.at(i).get('focus_major').value && helperService.checkSpacesString(educationFormArray.at(i).get('focus_major').value) && !checkMajorValidation(i, true) && educationFormArray.at(i).get('focus_major').touched">close</mat-icon>
               <mat-autocomplete #autocompleteFocusMajor="matAutocomplete" (closed)="onBlurFocusMajor(i)">
                 <mat-option *ngFor="let autocomplete_focus_major of autocomplete_focus_majors[i]" [value]="autocomplete_focus_major.major_name" (onSelectionChange)="onSelectFocusMajor(i, autocomplete_focus_major)">
                   <span>{{autocomplete_focus_major.major_name}}</span>
@@ -278,12 +278,12 @@
           </div>
         </ng-container>
         <div class="profile-form__field btn">
-          <action-button type="stroked" title="Add Education Info" (click)="onAddEducationData()" [disabled]="!(educationFormArray.valid && checkAllMajorValidation())"></action-button>
+          <action-button type="stroked" title="Add Education Info" (click)="onAddEducationData()" [disabled]="!(educationFormArray.valid && checkAllEducationInfoValidation())"></action-button>
         </div>
       </div>
     </div>
     <div class="container__full">
-      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(educationFormArray.valid && checkAllMajorValidation())"></action-button>
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(educationFormArray.valid && checkAllEducationInfoValidation())"></action-button>
     </div>
   </div>
   
@@ -391,12 +391,12 @@
           </div>
         </ng-container>
         <div class="profile-form__field btn">
-          <action-button type="stroked" title="Add Another" (click)="onAddExperienceData()" [disabled]="!workExperienceFormArray.valid"></action-button>
+          <action-button type="stroked" title="Add Another" (click)="onAddExperienceData()" [disabled]="!(workExperienceFormArray.valid && checkAllWorkExperienceInfoValidation())"></action-button>
         </div>
       </div>
     </div>
     <div class="container__full">
-      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!workExperienceFormArray.valid"></action-button>
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(workExperienceFormArray.valid && checkAllWorkExperienceInfoValidation())"></action-button>
     </div>
   </div>
   
@@ -499,12 +499,12 @@
           </div>
         </ng-container>
         <div class="profile-form__field btn">
-          <action-button type="stroked" title="Add Another" (click)="onAddProjectData()" [disabled]="!projectsFormArray.valid"></action-button>
+          <action-button type="stroked" title="Add Another" (click)="onAddProjectData()" [disabled]="!(projectsFormArray.valid && checkAllProjectsInfoValidation())"></action-button>
         </div>
       </div>
     </div>
     <div class="container__full">
-      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!projectsFormArray.valid"></action-button>
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(projectsFormArray.valid && checkAllProjectsInfoValidation())"></action-button>
     </div>
   </div>
   
@@ -556,12 +556,12 @@
           </div>
         </ng-container>
         <div class="profile-form__field btn">
-          <action-button type="stroked" title="Add Another" (click)="onAddPublicationData()" [disabled]="!publicationsFormArray.valid"></action-button>
+          <action-button type="stroked" title="Add Another" (click)="onAddPublicationData()" [disabled]="!(publicationsFormArray.valid && checkAllPublicationInfoValidation())"></action-button>
         </div>
       </div>
     </div>
     <div class="container__full">
-      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!publicationsFormArray.valid"></action-button>
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(publicationsFormArray.valid && checkAllPublicationInfoValidation())"></action-button>
     </div>
   </div>
   
